# vet

./: .gitignore  LICENSE  README.md  go.work  vet.yaml
.github/workflows/: vet.yml
docs/: architecture.md
implementations/go/: go.mod
implementations/go/cmd/vet/: main.go
implementations/go/internal/cli/: cli.go  cli_test.go
implementations/go/internal/config/: config.go  config_test.go
implementations/go/internal/diagnostic/: diagnostic.go
implementations/go/internal/goanalysis/: analyzer.go  analyzer_test.go  casing.go  workflow.go
implementations/go/internal/speccontract/: rules_test.go
implementations/rust/: Cargo.toml  README.md
implementations/rust/src/: analysis.rs  cli.rs  config.rs  diagnostic.rs  lib.rs  main.rs
implementations/rust/tests/: analyzer_tests.rs  cli_tests.rs  config_tests.rs  rust_vet_tests.rs
implementations/rust/tests/common/: mod.rs
implementations/swift/: Package.resolved  Package.swift  README.md
implementations/swift/Sources/VetCore/: CLI.swift  CasingAnalyzer.swift  Config.swift  Diagnostic.swift  FunctionParameterAnalyzer.swift  GitHubActionsAnalyzer.swift  HeaderAnalyzer.swift  IndentationAnalyzer.swift  Lexing.swift  SourceFileLineAnalyzer.swift  SourceLocation.swift  SwiftAnalyzer.swift
implementations/swift/Sources/vet/: main.swift
spec/config/: v1.example.yaml
spec/conformance/casing/go/: invalid.go  (+1 more)
spec/conformance/github-actions-pinned/: branch.yml  docker-action.yml  full-sha.yml  local-action.yml  missing-ref.yml  non-hex-40.yml  reusable-workflow.yml  short-sha.yml  tag.yml
spec/rules/: v1.yaml
(+60 files in other folders)
